Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -51,7 +51,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# connect database and create cursor here"
+    "# connect database and create cursor here\n",
+    "import sqlite3\n",
+    "connection = sqlite3.connect('pets_database.db')\n",
+    "cursor = connection.cursor()"
    ]
   },
   {
@@ -75,11 +78,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "OperationalError",
+     "evalue": "table cats already exists",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mOperationalError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-765254775305>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0mbreed\u001b[0m \u001b[0mTEXT\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m )\n\u001b[0;32m----> 9\u001b[0;31m ''')\n\u001b[0m",
+      "\u001b[0;31mOperationalError\u001b[0m: table cats already exists"
+     ]
+    }
+   ],
    "source": [
-    "# create table here"
+    "# create table here\n",
+    "cursor.execute('''\n",
+    "CREATE TABLE cats(\n",
+    "    id INTEGER PRIMARY KEY,\n",
+    "    name TEXT,\n",
+    "    age INTEGER,\n",
+    "    breed TEXT\n",
+    ")\n",
+    "''')"
    ]
   },
   {
@@ -104,11 +127,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x7f354d6d2180>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# insert Maru into the pet_database.db here"
+    "# insert Maru into the pet_database.db here\n",
+    "cursor.execute('''INSERT INTO cats (name, age, breed) VALUES ('Maru', 3, 'Scottish Fold');''')"
    ]
   },
   {
@@ -170,11 +205,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# execute the INSERT INTO statements here"
+    "# execute the INSERT INTO statements here\n",
+    "file = open(\"./01_insert_cats_into_cats_table.sql\", 'r')\n",
+    "sql = file.read()\n",
+    "\n",
+    "cursor.executescript(sql)\n",
+    "\n",
+    "file.close()"
    ]
   },
   {
@@ -258,11 +299,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 'Maru', 3, 'Scottish Fold'), (2, 'Maru', 3, 'Scottish Fold')]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# select cats from database here"
+    "# select cats from database here\n",
+    "cursor.execute('''SELECT * FROM cats;''').fetchall()"
    ]
   },
   {
@@ -298,11 +351,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 'Maru', 3, 'Scottish Fold'), (2, 'Maru', 3, 'Scottish Fold')]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# select using WHERE clause here"
+    "# select using WHERE clause here\n",
+    "cursor.execute('''SELECT * FROM cats WHERE name = \"Maru\";''').fetchall()"
    ]
   },
   {
